added comments and tried new script

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
             <section id="game"></section>
                 <h1 id="h1">Code Quiz!</h1>
                 <p id="p">See if you can answer the questions!</p>
-            <ul id="optionsUl"></ul>
+            <ul id="optionsUl">
+               
+            </ul>
+    
             <button id="startBtn">Start!</button>
         </div>
 
