--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <h1 id="h1">Code Quiz!</h1>
                 <p id="p">See if you can answer the questions!</p>
             <div id="questions">
-                <h2 id="question-title"></h2>
-                <div id="optionsUl">
+                <h2 id="questionTitle"></h2>
+                <div id="optionsDiv">
 
                 </div>
                
