got the script.js working, needs some basic styling

--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
                 <h3 id="showScore"></h3>
             </section>
             <section class="showHighScores">
+                <h2>HighScore</h2>
                 <h3 id="savedInitials"></h3>
                 <h3 id="savedScore"></h3>
             </section>
         </div>
+        
     </section>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> 
