--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="gameOver" style="display: none">
             <section class="enterHighScore">
                 <form>
-                    <label for="initials">Your Initials</label>
+                    <label for="initials" id="initialsInput">Your Initials</label>
                     <input type="text" id="initials" name="initials">
                     <button id="submitBtn" type="submit" name="submit">Submit</button>
                 </form>
@@ -38,12 +38,12 @@
                 <h3 id="showScore"></h3>
             </section>
             <section class="showHighScores">
-                <h2>HighScore</h2>
+                <h2>HighScore</h2><br>
                 <h3 id="savedInitials"></h3>
                 <h3 id="savedScore"></h3>
             </section>
         </div>
-        
+
     </section>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> 
